--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "scripts": {
         "start": "node shard.js"
     },
-    "engines": { "node": "9.9.0" },
+    "engines": {
+    "node": "9.x"
+  },
     "author": "Sikksens",
     "license": "Apache-2.0"
 }
